post_detail - add article html semantic index - mobile not responsive - fix conflict divs

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -29,10 +29,6 @@ body {
     min-height: 100vh;
 }
 
-h1, h2, h3 {
-    font-family: 'Lato', sans-serif;
-    font-weight: 700; /* Bold */
-  }
 
 .text-black {
 
@@ -566,8 +562,9 @@ footer {
 }
 
 .content-container {
-    padding-bottom: 15px;
-    border-radius: 8%;
+    max-width: 1200px; /* Adjust this value as needed */
+    margin: 0 auto; /* Center the container horizontally */
+    padding: 0 15px; /* Add some padding for better spacing */
 }
 
 .centralize-content {
@@ -737,8 +734,8 @@ h3 {
         background-color: rgba(0, 0, 0);
     }
 
-    .jumbotron-header-home {
-        font-size: 35px;
+    .jumbotron-header-home > h1 {
+        font-size: 20px;
         margin-top: 40px;
     }
 
